--- a/gb/22/5/17/n13739350.md
+++ b/gb/22/5/17/n13739350.md
@@ -167,7 +167,7 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/ychojm359/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/12/11/n10903516.md#1" target="_blank">观雨堂主：一位历史学家在生命终点的“争宠”</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/8/n11243139.md#1" target="_blank">治病与救人 警察为近八旬大夫“站岗”</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank">善良女子被中共投男牢</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/25/n10086007.md#1" target="_blank">郑兢业：人吃与吃人（二）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/11/n10706291.md#1" target="_blank">波兰中欧经济论坛 政要签名支持控告江泽民</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
